--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 #canvas {
 	border: 1px solid black;
+	font-family: "Creepster", cursive;
 }
 
 #player,
@@ -26,6 +27,7 @@ body {
 #enemy_plant,
 #enemy_spider,
 #fire,
-#collisionAnimation {
+#collisionAnimation,
+#lives {
 	display: none;
 }
